--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,13 @@ section {
     background-color: rgb(217, 171, 240);
     border-radius: 8px;
 }
+
+th {
+    background-color: rgb(73, 71, 71);
+    color: white;
+}
+
+th,
+td {
+    padding: 5px 10px;
+}
