--- a/src/index.css
+++ b/src/index.css
@@ -1,24 +1,1 @@
-section {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    margin-left: auto;
-    margin-right: auto;
-    border: 1px solid red;
-    gap: 20px;
-}
-
-.user {
-    border: 2px solid black;
-    background-color: rgb(217, 171, 240);
-    border-radius: 8px;
-}
-
-th {
-    background-color: rgb(73, 71, 71);
-    color: white;
-}
-
-th,
-td {
-    padding: 5px 10px;
-}
+@import "tailwindcss";
